--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.test'
 version = '0.0.1-SNAPSHOT'
-
+sourceCompatibility = '17'
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
