--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=architect_prj
 spring.datasource.url=jdbc:mysql://ec2-43-200-170-181.ap-northeast-2.compute.amazonaws.com:3306/springboot
-spring.datasource.username=test_aa
-spring.datasource.password=TESTaa123!!
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
