--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ configurations {
 repositories {
     mavenCentral()
 }
-
+apply plugin: 'war'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
