--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=${{ secrets.USERNAME }}
 spring.datasource.password=${{ secrets.PASSWORD }} 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+mybatis.type-aliases-package=logging.level.com.test.architect_prj.vo
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.jdbc-type-for-null=varchar
+mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+logging.level.com.test.architect_prj=debug
+logging.level.org.springframework.security=debug
